--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="jquery-mobile/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
-<link href="jquery-mobile/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
-<script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
-<script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
+<link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" type="text/css"/>
+<link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css"/>
+<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="js/jquery.mobile-1.3.2.min.js" type="text/javascript"></script>
 
-<script src="jquery-mobile/acciones.js"></script>
+<script src="js/acciones.js"></script>
+<script src="phonegap.js"></script>
 
 
 </head> 
@@ -29,7 +30,7 @@
         <a href="#" data-role="button" id="vibrar">VIBRAR</a>	
 	</div>
 	<div data-role="footer">
-		<h4>Mtro. David Nieto</h4>
+		<h4>Mtro. David Nieto "Nyeto el guapo"</h4>
 	</div>
 </div>
 
